--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "pallets/multicollateral-bonding-curve-pool",
     "node/",
 ]
+resolver = "2"
 
 [profile.release]
 panic = 'unwind'
