--- a/housekeeping/docker/develop/Dockerfile
+++ b/housekeeping/docker/develop/Dockerfile
@@ -35,7 +35,7 @@ RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-tool
 # Build project
 ADD . /app
 WORKDIR /app
-RUN cargo build --release
+RUN cargo build --release --features test-net
 
 # Remove source code
 WORKDIR /
