--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -14,7 +14,7 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 hex-literal = { version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.101' }
 common = { path = "../common", default-features = false }
-faucet = { path = "../pallets/faucet", default-features = false }
+faucet = { path = "../pallets/faucet", default-features = false, optional = true }
 assets = { path = "../pallets/assets", default-features = false }
 bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features = false }
 multicollateral-bonding-curve-pool = { path = "../pallets/multicollateral-bonding-curve-pool", default-features = false }
@@ -87,12 +87,13 @@ pallet-authorship = { default-features = false, version = '3' }
 
 # Other
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
+static_assertions = "1.1.0"
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 traits = { version = "0.4", package = "orml-traits", default-features = false }
-static_assertions = "1.1.0"
 
 [features]
 default = ['std']
+
 std = [
     'codec/std',
     'serde',
@@ -135,8 +136,10 @@ std = [
     'eth-bridge/std',
     'eth-bridge-runtime-api/std',
     'farming/std',
-    'faucet/std',
+    'farming-runtime-api/std',
+    'faucet?/std',
     'iroha-migration/std',
+    'iroha-migration-runtime-api/std',
     'liquidity-proxy/std',
     'mock-liquidity-source/std',
     'bridge-multisig/std',
@@ -157,6 +160,8 @@ std = [
     'pswap-distribution-runtime-api/std',
 ]
 
+test-net = ["faucet"]
+
 runtime-benchmarks = [
     "frame-benchmarking",
     "frame-system/runtime-benchmarks",
@@ -165,7 +170,7 @@ runtime-benchmarks = [
     "assets/runtime-benchmarks",
     "dex-api-benchmarking",
     "dex-manager/runtime-benchmarks",
-    "faucet/runtime-benchmarks",
+    "faucet?/runtime-benchmarks",
     "liquidity-proxy-benchmarking",
     "pool-xyk-benchmarking",
     "technical/runtime-benchmarks",
