[ETH Bridge] Benchmarks
Signed-off-by: Vladislav Markushin <negigic@gmail.com>

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -179,6 +179,7 @@ runtime-benchmarks = [
     "frame-system-benchmarking",
     "pallet-collective/runtime-benchmarks",
     "assets/runtime-benchmarks",
+    "eth-bridge/runtime-benchmarks",
     "dex-api-benchmarking",
     "dex-manager/runtime-benchmarks",
     "faucet?/runtime-benchmarks",
