--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full"] }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
+frame-benchmarking = { version = "3", default-features = false, optional = true }
 hex-literal = "0.3.1"
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 once_cell = { version = "1.5.2", default-features = false, features = ['alloc', 'unstable'] }
@@ -65,4 +66,9 @@ std = [
     'serde/std',
     'sp-core/std',
     'sp-std/std',
+]
+runtime-benchmarks = [
+    "frame-benchmarking",
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
 ]
