Initial values tweaks

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -186,3 +186,5 @@ runtime-benchmarks = [
     "technical/runtime-benchmarks",
     "trading-pair/runtime-benchmarks",
 ]
+
+reduced-pswap-reward-periods = []
