Add bonding curve benchmarks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
     ],
     "rust-analyzer.diagnostics.disabled": [
         "macro-error"
-    ]
+    ],
+    "rust-analyzer.cargo.features": ["runtime-benchmarks"]
 }
