--- a/pallets/pswap-distribution/Cargo.toml
+++ b/pallets/pswap-distribution/Cargo.toml
@@ -14,23 +14,24 @@ currencies = { version = "0.4", package = "orml-currencies", default-features = 
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
 pallet-balances = { version = "3", default-features = false }
+frame-benchmarking = { version = "3", default-features = false, optional = true }
 serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
 sp-arithmetic = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 traits = { version = "0.4", package = "orml-traits", default-features = false }
-
+hex-literal = { version = "0.3.1", optional = true }
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 technical = { path = "../technical", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
 
 [dev-dependencies]
 hex-literal = { version = '0.3.1' }
 sp-core = { version = "3", default-features = false}
 sp-io = { version = "3", default-features = false}
 sp-runtime = { version = "3", default-features = false}
-
 bonding-curve-pool = { path = "../bonding-curve-pool" }
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
@@ -50,4 +51,11 @@ std = [
     'sp-std/std',
     'tokens/std',
     'traits/std',
+    'trading-pair/std',
+]
+runtime-benchmarks = [
+    "frame-benchmarking",
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "hex-literal",
 ]
