--- a/pallets/rewards/rpc/Cargo.toml
+++ b/pallets/rewards/rpc/Cargo.toml
@@ -9,12 +9,12 @@ jsonrpc-core = "15.0.0"
 jsonrpc-core-client = "15.0.0"
 jsonrpc-derive = "15.0.0"
 serde = { version = "1.0.101", features = ["derive"] }
-sp-api = { version = "3" }
-sp-blockchain = { version = "3" }
-sp-core = { version = "3" }
-sp-rpc = { version = "3" }
-sp-runtime = { version = "3" }
-sp-std = { version = "3" }
+sp-api = "3"
+sp-blockchain = "3"
+sp-core = "3"
+sp-rpc = "3"
+sp-runtime = "3"
+sp-std = "3"
 
 common = { path = "../../../common" }
 rewards-runtime-api = { path = "../runtime-api" }
