--- a/pallets/dex-api/benchmarking/Cargo.toml
+++ b/pallets/dex-api/benchmarking/Cargo.toml
@@ -24,7 +24,7 @@ permissions = { path = "../../permissions", default-features = false }
 trading-pair = { path = "../../trading-pair", default-features = false }
 technical = { path = "../../technical", default-features = false }
 pswap-distribution = { path = "../../pswap-distribution", default-features = false }
-hex-literal = { version = "0.3.1" }
+hex-literal = "0.3.1"
 
 [dev-dependencies]
 serde = { version = "1.0.101", default-features = false, features = ["derive"] }
