--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -36,8 +36,8 @@ currencies = { version = "0.4", package = "orml-currencies", default-features = 
 env_logger = "0.8.1"
 frame-executive = { version = "3", default-features = false }
 orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
-pallet-balances = { version = "3" }
-pallet-sudo = { version = "3" }
+pallet-balances = "3"
+pallet-sudo = "3"
 parity-util-mem = { version = "0.9", default-features = false }
 parking_lot = "0.11.0"
 sp-core = { version = "3", default-features = false, features = ["full_crypto"] }
