--- a/pallets/faucet/Cargo.toml
+++ b/pallets/faucet/Cargo.toml
@@ -15,7 +15,7 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
-hex-literal = { version = "0.3.1" }
+hex-literal = "0.3.1"
 pallet-timestamp = { version = "3", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-arithmetic = { version = "3", default-features = false }
