--- a/pallets/pool-xyk/benchmarking/Cargo.toml
+++ b/pallets/pool-xyk/benchmarking/Cargo.toml
@@ -20,7 +20,7 @@ technical = { path = "../../technical", default-features = false }
 trading-pair = { path = "../../trading-pair", default-features = false }
 permissions = { path = "../../permissions", default-features = false }
 pswap-distribution = { path = "../../pswap-distribution", default-features = false }
-hex-literal = { version = "0.3.1" }
+hex-literal = "0.3.1"
 
 [dev-dependencies]
 serde = { version = "1.0.101", default-features = false, features = ["derive"] }
