--- a/pallets/pswap-distribution/Cargo.toml
+++ b/pallets/pswap-distribution/Cargo.toml
@@ -26,7 +26,7 @@ liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
-hex-literal = { version = '0.3.1' }
+hex-literal = "0.3.1"
 sp-core = { version = "3", default-features = false}
 sp-io = { version = "3", default-features = false}
 sp-runtime = { version = "3", default-features = false}
