--- a/pallets/pswap-distribution/rpc/Cargo.toml
+++ b/pallets/pswap-distribution/rpc/Cargo.toml
@@ -9,12 +9,12 @@ codec = { package = "parity-scale-codec", version = "2" }
 jsonrpc-core = "15.0.0"
 jsonrpc-core-client = "15.0.0"
 jsonrpc-derive = "15.0.0"
-sp-runtime = { version = "3" }
-sp-api = { version = "3" }
-sp-blockchain = { version = "3" }
-sp-std = { version = "3" }
-sp-core = { version = "3" }
-sp-rpc = { version = "3" }
+sp-runtime = "3"
+sp-api = "3"
+sp-blockchain = "3"
+sp-std = "3"
+sp-core = "3"
+sp-rpc = "3"
 
 common = { path = "../../../common" }
 pswap-distribution-runtime-api = { path = "../runtime-api" }
