--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -12,8 +12,10 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
+frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
+hex-literal = { version = "0.3.1", optional = true }
 libsecp256k1 = { version = "0.3.5", features = ["hmac"], default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-core = { version = "3", default-features = false }
@@ -27,8 +29,8 @@ technical = { path = "../technical", default-features = false }
 [dev-dependencies]
 currencies = { version = "0.4", package = "orml-currencies" }
 hex-literal = "0.3.1"
-pallet-balances = { version = "3" }
-sp-runtime = { version = "3" }
+pallet-balances = "3"
+sp-runtime = "3"
 tokens = { version = "0.4", package = "orml-tokens" }
 
 assets = { path = "../assets" }
@@ -47,4 +49,11 @@ std = [
     'sp-core/std',
     'sp-io/std',
     'sp-std/std',
+]
+
+runtime-benchmarks = [
+    "frame-benchmarking",
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "hex-literal"
 ]
