--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "rust-analyzer.server.extraEnv": {
         "SKIP_WASM_BUILD": "true"
     },
-    "rust-analyzer.cargo.features": ["runtime-benchmarks"],
+    "rust-analyzer.cargo.features": ["private-net"],
     "rust-analyzer.diagnostics.disabled": [
         "macro-error"
     ],
