--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
-name = 'framenode'
-version = '0.1.0'
+name = "framenode"
+version = "0.1.0"
 authors = ["Parity Technologies <admin@parity.io>"]
-build = 'build.rs'
-edition = '2018'
+build = "build.rs"
+edition = "2018"
 
 [[bin]]
-name = 'framenode'
-path = 'src/main.rs'
+name = "framenode"
+path = "src/main.rs"
 
 [dependencies]
-derive_more = '0.99.13'
-exit-future = '0.2.0'
+derive_more = "0.99.13"
+exit-future = "0.2.0"
 futures = { version = "0.3.1", features = ["compat"] }
 hex-literal = "0.3.1"
-log = '0.4.8'
-parking_lot = '0.11'
-trie-root = '0.16.0'
-codec = { package = 'parity-scale-codec', version = "2", features = ["derive"]}
+log = "0.4.8"
+parking_lot = "0.11"
+trie-root = "0.16.0"
+codec = { package = "parity-scale-codec", version = "2", features = ["derive"]}
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
@@ -41,7 +41,7 @@ bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git"
 farming-rpc = { path = "../pallets/farming/rpc" }
 eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
-libsecp256k1 = { version = "0.3.5", features = ['hmac'] }
+libsecp256k1 = { version = "0.3.5", features = ["hmac"] }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
@@ -81,8 +81,8 @@ sc-informant = "0.9"
 sc-chain-spec = "3"
 frame-support = "3"
 pallet-transaction-payment-rpc = "3"
-frame-benchmarking = '3'
-frame-benchmarking-cli = '3'
+frame-benchmarking = "3"
+frame-benchmarking-cli = { version = "3", optional = true }
 substrate-frame-rpc-system = "3"
 
 [build-dependencies]
@@ -114,6 +114,7 @@ private-net = [
 ]
 
 runtime-benchmarks = [
+    "frame-benchmarking-cli",
     "framenode-runtime/runtime-benchmarks",
     "sc-executor/wasmtime",
     "sc-cli/wasmtime",
