--- a/misc/rewards_snapshot/get_lp_tokens/Cargo.toml
+++ b/misc/rewards_snapshot/get_lp_tokens/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "get_lp_tokens"
+name = "get-lp-tokens"
 version = "0.1.0"
 authors = ["Alexey Kalita <kalita.alexey@outlook.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
 
 [dependencies]
 fixnum = { version = "0.5", features = ["i128"] }
