--- a/pallets/bonding-curve-pool/Cargo.toml
+++ b/pallets/bonding-curve-pool/Cargo.toml
@@ -29,6 +29,7 @@ permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
+hex-literal = "0.3.1"
 pallet-balances = { version = "3", default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
