--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,7 +17,7 @@ hex-literal = "0.3.1"
 log = "0.4.8"
 parking_lot = "0.11"
 trie-root = "0.16.0"
-codec = { package = "parity-scale-codec", version = "2", features = ["derive"]}
+codec = { package = "parity-scale-codec", version = "2", features = ["derive", "chain-error"]}
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
