Add stripped version of vested-rewards pallet with market makers infos storage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
     "pallets/eth-bridge",
     "pallets/pswap-distribution",
     "pallets/multicollateral-bonding-curve-pool",
+    "pallets/vested-rewards",
     "node/",
 ]
 resolver = "2"
