--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -20,6 +20,7 @@ hex-literal = { version = "0.3.1", optional = true }
 orml-traits = { version = "0.4", default-features = false }
 pallet-timestamp = { version = "3", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
+sp-arithmetic = { version = "3", default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
@@ -29,7 +30,9 @@ common = { path = "../../common", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 pool-xyk = { path = "../pool-xyk", default-features = false }
+pswap-distribution = { path = "../pswap-distribution", default-features = false }
 technical = { path = "../technical", default-features = false }
+tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 
 [dev-dependencies]
