Adding lto and log error (#376)

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,13 @@
 [profile.dev]
 debug = false
 
+[profile.release]
+lto = true
+opt-level = 's'
+
 [profile.test]
 debug = false
 
 [unstable]
 weak-dep-features = true
+
