Kalita/main net (#384)

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -99,6 +99,8 @@ pallet-sudo = "3"
 [features]
 include-real-files = []
 
+main-net-coded = []
+
 private-net = [
     "faucet",
     "framenode-runtime/private-net",
