--- a/pallets/vested-rewards/Cargo.toml
+++ b/pallets/vested-rewards/Cargo.toml
@@ -26,6 +26,7 @@ assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
 sp-runtime = { version = "3", default-features = false }
+multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool", default-features = false }
 
 [dev-dependencies]
 pallet-balances = { version = "3"}
@@ -34,6 +35,10 @@ common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
 permissions = { path = "../permissions" }
 trading-pair = { path = "../trading-pair" }
+pool-xyk = { path = "../pool-xyk" }
+pswap-distribution = { path = "../pswap-distribution" }
+technical = { path = "../technical" }
+liquidity-proxy = { path = "../liquidity-proxy" }
 
 [features]
 default = ['std']
@@ -49,4 +54,5 @@ std = [
     'tokens/std',
     'traits/std',
     'sp-runtime/std',
+    'multicollateral-bonding-curve-pool/std',
 ]
