--- a/pallets/multicollateral-bonding-curve-pool/Cargo.toml
+++ b/pallets/multicollateral-bonding-curve-pool/Cargo.toml
@@ -45,6 +45,7 @@ dex-manager = { path = "../dex-manager" }
 mock-liquidity-source = { path = "../mock-liquidity-source" }
 technical = { path = "../technical" }
 trading-pair = { path = "../trading-pair" }
+vested-rewards = { path = "../vested-rewards" }
 
 [features]
 default = ['std']
