fix some problems with xst mocks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "pallets/pswap-distribution",
     "pallets/multicollateral-bonding-curve-pool",
     "pallets/vested-rewards",
+    "pallets/xst",
     "node/",
 ]
 resolver = "2"
