price-tools pallet with average quote logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "pallets/pswap-distribution",
     "pallets/multicollateral-bonding-curve-pool",
     "pallets/vested-rewards",
+    "pallets/price-tools",
     "node/",
 ]
 resolver = "2"
