--- a/pallets/price-tools/Cargo.toml
+++ b/pallets/price-tools/Cargo.toml
@@ -13,27 +13,38 @@ targets = ['x86_64-unknown-linux-gnu']
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
-frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
-hex-literal = "0.3.1"
+frame-benchmarking = { version = "3", default-features = false, optional = true }
+hex-literal = { version = "0.3.1", optional = true }
+orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
-sp-core = { version = "3", default-features = false }
+sp-arithmetic = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
-tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 assets = { path = "../assets", default-features = false }
-traits = { version = "0.4", package = "orml-traits", default-features = false }
+bonding-curve-pool = { path = "../bonding-curve-pool", default-features = false }
 common = { path = "../../common", default-features = false }
-permissions = { path = "../permissions", default-features = false }
+dex-api = { path = "../dex-api", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
+permissions = { path = "../permissions", default-features = false }
+pswap-distribution = { path = "../pswap-distribution", default-features = false }
+technical = { path = "../technical", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
+pool-xyk = { path = "../pool-xyk", default-features = false }
 
 [dev-dependencies]
+hex-literal = "0.3.1"
 pallet-balances = { version = "3", default-features = false }
+sp-core = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
+bonding-curve-pool = { path = "../bonding-curve-pool" }
 common = { path = "../../common", features = ["test"] }
-permissions = { path = "../permissions" }
+dex-manager = { path = "../dex-manager" }
+mock-liquidity-source = { path = "../mock-liquidity-source" }
+technical = { path = "../technical" }
+trading-pair = { path = "../trading-pair" }
 
 [features]
 default = ['std']
@@ -42,17 +53,19 @@ std = [
     'currencies/std',
     'frame-support/std',
     'frame-system/std',
+    'orml-traits/std',
+    'orml-traits/std',
     'serde',
-    'sp-core/std',
+    'sp-arithmetic/std',
     'sp-runtime/std',
     'sp-std/std',
     'tokens/std',
-    'traits/std',
-    'liquidity-proxy/std',
-    'assets/std',
+    'pool-xyk/std',
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
+    "hex-literal",
 ]
+private-net=[]
