--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -53,7 +53,8 @@ pswap-distribution-runtime-api = { path = "../pallets/pswap-distribution/runtime
 liquidity-proxy-benchmarking = { path = "../pallets/liquidity-proxy/benchmarking", default-features = false, optional = true }
 pool-xyk-benchmarking = { path = "../pallets/pool-xyk/benchmarking", default-features = false, optional = true }
 dex-api-benchmarking = { path = "../pallets/dex-api/benchmarking", default-features = false, optional = true }
-vested-rewards = { path = "../pallets/vested-rewards", default-features = false}
+vested-rewards = { path = "../pallets/vested-rewards", default-features = false }
+price-tools = { path = "../pallets/price-tools", default-features = false }
 
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, version = '3' }
@@ -182,6 +183,7 @@ std = [
     'pswap-distribution/std',
     'pswap-distribution-runtime-api/std',
     'vested-rewards/std',
+    'price-tools/std',
 ]
 
 private-net = ["faucet"]
