--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -6,7 +6,7 @@ repository = 'https://github.com/sora-xor/sora2-network'
 description = 'Pallet for claiming rewards'
 edition = '2018'
 name = 'rewards'
-version = '0.1.0'
+version = '1.1.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -16,12 +16,13 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
-hex-literal = { version = "0.3.1", optional = true }
+hex-literal = { version = "0.3.1", default-features = false }
 libsecp256k1 = { version = "0.3.5", features = ["hmac"], default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-core = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
+orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
 
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
@@ -29,7 +30,6 @@ technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
 currencies = { version = "0.4", package = "orml-currencies" }
-hex-literal = "0.3.1"
 pallet-balances = "3"
 sp-runtime = "3"
 tokens = { version = "0.4", package = "orml-tokens" }
@@ -56,5 +56,4 @@ runtime-benchmarks = [
     "frame-benchmarking",
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
-    "hex-literal"
 ]
