--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -18,6 +18,7 @@ frame-system = { version = "3", default-features = false }
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 num-traits = { version = "0.2.12", default-features = false }
 orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
+paste = "1.0.0"
 rustc-hex = { version = "2.1.0", default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
 smallvec = "1.5.0"
