--- a/pallets/price-tools/Cargo.toml
+++ b/pallets/price-tools/Cargo.toml
@@ -22,6 +22,8 @@ serde = { version = "1.0.101", default-features = false, optional = true, featur
 sp-arithmetic = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
+sp-core = { version = "3", default-features = false }
+sp-io = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 assets = { path = "../assets", default-features = false }
 bonding-curve-pool = { path = "../bonding-curve-pool", default-features = false }
@@ -30,20 +32,17 @@ dex-api = { path = "../dex-api", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 pswap-distribution = { path = "../pswap-distribution", default-features = false }
-technical = { path = "../technical", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
-pool-xyk = { path = "../pool-xyk", default-features = false }
+pool-xyk = { path = "../pool-xyk", default-features = false}
+technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
 hex-literal = "0.3.1"
 pallet-balances = { version = "3", default-features = false }
-sp-core = { version = "3", default-features = false }
-sp-io = { version = "3", default-features = false }
 bonding-curve-pool = { path = "../bonding-curve-pool" }
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
 mock-liquidity-source = { path = "../mock-liquidity-source" }
-technical = { path = "../technical" }
 trading-pair = { path = "../trading-pair" }
 
 [features]
@@ -59,8 +58,11 @@ std = [
     'sp-arithmetic/std',
     'sp-runtime/std',
     'sp-std/std',
+    'sp-core/std',
+    'sp-io/std',
     'tokens/std',
     'pool-xyk/std',
+    'technical/std',
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
