--- a/pallets/pool-xyk/Cargo.toml
+++ b/pallets/pool-xyk/Cargo.toml
@@ -6,7 +6,7 @@ repository = 'https://github.com/sora-xor/sora2-network'
 description = 'Pool XYK'
 edition = '2018'
 name = 'pool-xyk'
-version = '1.1.0'
+version = '0.1.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -18,7 +18,6 @@ frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
 num-traits = { version = "0.2.12", default-features = false }
 orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
-orml-tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
@@ -35,6 +34,7 @@ trading-pair = { path = "../trading-pair", default-features = false }
 hex-literal = "0.3.1"
 pallet-balances = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
+tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
