--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -5,7 +5,7 @@ license = "BSD-4-Clause"
 homepage = 'https://sora.org'
 repository = 'https://github.com/sora-xor/sora2-network'
 name = 'farming'
-version = '0.1.0'
+version = '1.0.0'
 edition = '2018'
 
 [package.metadata.docs.rs]
@@ -30,10 +30,10 @@ common = { path = "../../common", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 pool-xyk = { path = "../pool-xyk", default-features = false }
-pswap-distribution = { path = "../pswap-distribution", default-features = false }
 technical = { path = "../technical", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
+vested-rewards = { path = "../vested-rewards", default-features = false }
 
 [dev-dependencies]
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
@@ -45,6 +45,7 @@ assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
 mock-liquidity-source = { path = "../mock-liquidity-source" }
+multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool" }
 permissions = { path = "../permissions" }
 pswap-distribution = { path = "../pswap-distribution" }
 technical = { path = "../technical" }
